--- a/templates/groupsystem/postdetails.html
+++ b/templates/groupsystem/postdetails.html
@@ -59,35 +59,37 @@
                 </div>
                 <!-- /.box-body -->
                 {% if 'can_read_comment' in group_perms %}
-                <div class="box-footer box-comments">
-                    {% for comment in post.comments.all %}
-                        {% if comment.approved %}
-                            <div class="box-comment">
-                                {% if commentor.profile.avatar_public %}
-                                    {% if commentor.profile.avatar %}
-                                        <a href="#">
-                                            <img src="{{ commentor.profile.avatar.thumbnail.128x128 }}" class="img-circle img-sm" alt="User Image">
-                                        </a>
-                                    {% else %}
-                                        <a href="#">
-                                            <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="128" height="128">
-                                        </a>
-                                    {% endif %}
-                                {% else %}
-                                    <a href="#">
-                                        <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="128" height="128">
-                                    </a>
+                    <div class="box-footer box-comments">
+                        <div id="commentwrapper">
+                        {% for comment in post.comments.all %}
+                                {% if comment.approved %}
+                                    <div class="box-comment">
+                                        {% if commentor.profile.avatar_public %}
+                                            {% if commentor.profile.avatar %}
+                                                <a href="#">
+                                                    <img src="{{ commentor.profile.avatar.thumbnail.128x128 }}" class="img-circle img-sm" alt="User Image">
+                                                </a>
+                                            {% else %}
+                                                <a href="#">
+                                                    <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="128" height="128">
+                                                </a>
+                                            {% endif %}
+                                        {% else %}
+                                            <a href="#">
+                                                <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle img-sm" width="128" height="128">
+                                            </a>
+                                        {% endif %}
+                                        <div class="comment-text">
+                                            <span class="username">
+                                                {{ comment.commentor.username }}
+                                                <span class="text-muted pull-right">{{ comment.commented_on|date:"M j Y" }}</span>
+                                            </span>
+                                            {{ comment.comment }}
+                                        </div>
+                                    </div>
                                 {% endif %}
-                                <div class="comment-text">
-                                    <span class="username">
-                                        {{ comment.commentor.username }}
-                                        <span class="text-muted pull-right">{{ comment.commented_on|date:"M j Y" }}</span>
-                                    </span>
-                                    {{ comment.comment }}
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
                 {% endif %}
                 {% if 'can_create_comment' in group_perms %}
@@ -114,10 +116,15 @@
                     type: 'POST',
                     data: {'comment': $(this).val()},
                     success: function (data) {
-                        $('.top-right').notify({
-                            message: { text: data},
-                            type: 'info',
-                        }).show();
+                        if (data.response_type == 'html') {
+                            $('#commentwrapper').append(data.response);
+                        }
+                        else {
+                            $('.top-right').notify({
+                                message: { text: data},
+                                type: 'info',
+                            }).show();
+                        }
                         $("#comment").val("");
                     }
                 });
