--- a/templates/groupsystem/posts.html
+++ b/templates/groupsystem/posts.html
@@ -27,56 +27,58 @@
         </div>
         {% endif %}
     {% endif %}
-    {% if posts %}
-        {% for post in posts reversed %}
-        {% if post.approved %}
-            <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="box box-widget">
-                    <div class="box-header with-border">
-                        <div class="user-block">
-                            {% if memberpost %}
-                                {% if creator.profile.avatar_public %}
-                                    {% if creator.profile.avatar %}
-                                        <a href="#">
-                                            <img src="{{ creator.profile.avatar.thumbnail.128x128 }}" class="img-circle" alt="User Image">
-                                        </a>
+    <div id="postwrapper">
+        {% if posts %}
+            {% for post in posts reversed %}
+                {% if post.approved %}
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="box box-widget">
+                            <div class="box-header with-border">
+                                <div class="user-block">
+                                    {% if memberpost %}
+                                        {% if creator.profile.avatar_public %}
+                                            {% if creator.profile.avatar %}
+                                                <a href="#">
+                                                    <img src="{{ creator.profile.avatar.thumbnail.128x128 }}" class="img-circle" alt="User Image">
+                                                </a>
+                                            {% else %}
+                                                <a href="#">
+                                                    <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle" width="128" height="128">
+                                                </a>
+                                            {% endif %}
+                                        {% else %}
+                                            <a href="#">
+                                                <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle" width="128" height="128">
+                                            </a>
+                                        {% endif %}
+                                        <span class="username"><a href="{% url 'publicusers:user' post.creator.id %}">{{ post.creator.username }}</a></span>
                                     {% else %}
-                                        <a href="#">
-                                            <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle" width="128" height="128">
-                                        </a>
+                                        <img class="img-circle" src="{{ group.logo.thumbnail.128x128 }}" alt="Group Image">
+                                        <span class="username"><a href="{% url 'g:groupdetails' group.id %}">{{ group.name }}</a></span>
                                     {% endif %}
-                                {% else %}
-                                    <a href="#">
-                                        <img src="{% static "dist/img/placeholder-user.png" %}" class="img-circle" width="128" height="128">
-                                    </a>
-                                {% endif %}
-                                <span class="username"><a href="{% url 'publicusers:user' post.creator.id %}">{{ post.creator.username }}</a></span>
-                            {% else %}
-                                <img class="img-circle" src="{{ group.logo.thumbnail.128x128 }}" alt="Group Image">
-                                <span class="username"><a href="{% url 'g:groupdetails' group.id %}">{{ group.name }}</a></span>
-                            {% endif %}
-                            <span class="description">{{ post.created_on|date:"M j Y" }}</span>
+                                    <span class="description">{{ post.created_on|date:"M j Y" }}</span>
+                                </div>
+                                <!-- /.user-block -->
+                            </div>
+                            <!-- /.box-header -->
+                            <div class="box-body">
+                                <!-- post text -->
+                                <h1>{{ post.title }}</h1>
+                                <p>{{ post.post|truncatewords_html:10|safe }}<span><a href="{% url 'g:postdetail' group.id post.id %}">{% trans "more" %}</a></span></p>
+                                <!-- Social sharing buttons -->
+                                <span class="pull-right text-muted" id="socialstatus">{{ post.likes.count }} likes - {{ post.comments.count }} comments</span>
+                            </div>
+                            <!-- /.box-body -->
                         </div>
-                        <!-- /.user-block -->
                     </div>
-                    <!-- /.box-header -->
-                    <div class="box-body">
-                        <!-- post text -->
-                        <h1>{{ post.title }}</h1>
-                        <p>{{ post.post|truncatewords_html:10|safe }}<span><a href="{% url 'g:postdetail' group.id post.id %}">{% trans "more" %}</a></span></p>
-                        <!-- Social sharing buttons -->
-                        <span class="pull-right text-muted" id="socialstatus">{{ post.likes.count }} likes - {{ post.comments.count }} comments</span>
-                    </div>
-                    <!-- /.box-body -->
                 </div>
-            </div>
-        </div>
+                {% endif %}
+        {% endfor %}
+        {% else %}
+        <p>{% trans "No Posts Yet!!" %}</p>
         {% endif %}
-    {% endfor %}
-    {% else %}
-    <p>{% trans "No Posts Yet!!" %}</p>
-    {% endif %}
+    </div>
     {% if memberpost %}
         <div tabindex="-1" class="modal fade" id="createPostModal" role="dialog" aria-hidden="true" aria-labelledby="createPostModalLabel">
             <div class="modal-dialog">
@@ -121,10 +123,15 @@
                     data: frm.serialize(),
                     success: function(data) {
                         $("#createPostModal").modal("hide");
-                        $('.top-right').notify({
-                            message: { text: data},
-                            type: 'info',
-                        }).show();
+                        if (data.response_type == 'html') {
+                            $('#postwrapper').prepend(data.response);
+                        }
+                        else {
+                            $('.top-right').notify({
+                                message: { text: data},
+                                type: 'info',
+                            }).show();
+                        }
                     },
                     error: function(data) {
                         frm.html(data.responseText);
