--- a/templates/base.html
+++ b/templates/base.html
@@ -380,6 +380,9 @@
 
                 {% endblock content_header %}
             </section>
+            {% block content_header_new %}
+
+            {% endblock %}
             <!-- Main content -->
             <section class="content">
                 <div class="notifications top-right"></div>
