--- a/templates/eblast/emailgroups_page.html
+++ b/templates/eblast/emailgroups_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n staticfiles %}
+{% load i18n staticfiles bootstrap_tags %}
 {% block title %}
     {% trans "EmailGroups | eBlast" %}
 {% endblock title %}
@@ -38,18 +38,211 @@
     <div class="row">
         <div class="col-md-12">
             <div class="box box-solid">
-                {% comment %}
-                <div class="box-header with-border">
-                    <h3 class="box-title">{% trans "Email Groups" %}</h3>
-                </div>
-                {% endcomment %}
-                <div class="box-body">
-
+                <div class="box-body listcontent-wrapper">
+                    <div class="listcontent-list col-md-3 col-sm-3">
+                        <div class="listcontent-header text-center">
+                            <h4>{% trans "Groups" %}</h4>
+                        </div>
+                        <div class="listcontent-body">
+                            <ul>
+                                {% for emailgroup in emailgroups %}
+                                    {% if forloop.counter == 1 %}
+                                        <li class="selected emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% trans "emailids" %}</p></li>
+                                    {% else %}
+                                        <li class="emailGroup" data-id={{ emailgroup.id }}>{{ emailgroup.name }} <p>{{ emailgroup.emailids.count }} {% trans "emailids" %}</p></li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% if emailgroups %}
+                        <div class="listcontent-addnewbtn newbtn" id="addnewgroup">
+                            <p>
+                                {% trans "Add new Email Group" %}
+                            </p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="listcontent-content col-md-9 col-sm-9">
+                        {% if emailgroups %}
+                            {% for emailgroup in emailgroups %}
+                                {% if forloop.counter == 1 %}
+                                    {% include "eblast/emailgroup.html" %}
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            {% include "eblast/emailgroupform.html" %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
 {% block extrascripts %}
-
+    <script type="text/javascript">
+        function loadEmailGroup(id) {
+            $('.listcontent-content').load('{% url 'eblast:emailgroups' %}?emailgroup=' + id, function(){
+                $(".table").bootstrapTable({
+                    'pagination': true,
+                    'pageNumber': 1,
+                    'pageSize': 5,
+                    'pageList': [5, 10, 15, 20, 25],
+                    'search': true,
+                    'showExport': true,
+                    'exportDataType': 'all',
+                    'exportTypes': ['json', 'csv', 'txt', 'excel'],
+                });
+                $('.emailGroup').removeClass('selected');
+                $('.emailGroup[data-id=' + id + ']').addClass('selected');
+                $("#id_users").selectpicker({
+                    liveSearch: true
+                });
+                $('#id_csv_file').fileinput({
+                    showUpload: false
+                });
+            });
+        }
+        function removeEmailId(id){
+            $.ajax({
+                url: '{% url 'eblast:remove_emailid' %}',
+                type: 'POST',
+                data: {'id': id},
+                success: function(){
+                    $(".table").bootstrapTable('removeByUniqueId', id);
+                }
+            });
+        }
+        function unsubscribeEmailid(id) {
+            $.ajax({
+                url: '{% url 'eblast:unsubscribe_emailid' %}',
+                type: 'POST',
+                data: {'id': id},
+                success: function(){
+                    location.reload();
+                }
+            });
+        }
+        function subscribeEmailid(id) {
+            $.ajax({
+                url: '{% url 'eblast:subscribe_emailid' %}',
+                type: 'POST',
+                data: {'id': id},
+                success: function(){
+                    location.reload();
+                }
+            });
+        }
+        $("#id_users").selectpicker({
+            liveSearch: true
+        });
+        $('#id_csv_file').fileinput({
+            showUpload: false
+        });
+        $(".table").bootstrapTable({
+            'pagination': true,
+            'pageNumber': 1,
+            'pageSize': 5,
+            'pageList': [5, 10, 15, 20, 25],
+            'search': true,
+            'showExport': true,
+            'exportDataType': 'all',
+            'exportTypes': ['json', 'csv', 'txt', 'excel'],
+        });
+        $(document).on('click', '#newemailgroupformbtn', function(){
+            var form = $("#newemailgroupform");
+            var data = new FormData(form[0]);
+            $.ajax({
+                url: $(form).attr('action'),
+                type: $(form).attr('method'),
+                data: data,
+                contentType: false,
+                processData: false,
+                success: function(data){
+                    {% if emailgroups %}
+                        loadEmailGroup(data);
+                    {% else %}
+                        location.reload();
+                    {% endif %}
+                },
+                error: function(data){
+                    $('.listcontent-content').html(data.responseText);
+                    $("#id_users").selectpicker({
+                        liveSearch: true
+                    });
+                    $('#id_csv_file').fileinput({
+                        showUpload: false
+                    });
+                }
+            });
+        });
+        $("#addnewgroup").click(function(){
+            $('.listcontent-content').load('{% url 'eblast:create_emailgroup' %}', function(){
+                $("#id_users").selectpicker({
+                    liveSearch: true
+                });
+                $('#id_csv_file').fileinput({
+                    showUpload: false
+                });
+            });
+        });
+        $('.emailGroup').click(function(){
+            var id = $(this).attr('data-id');
+            var self = $(this);
+            loadEmailGroup(id);
+        });
+        $(document).on('click', '#deleteemailgroup', function(){
+            var emailgroup_id = $(this).attr('data-group-id');
+            swal({
+                title: "You are about to delete this email group.",
+                text: "Do you want to delete this record?",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#DD6B55",
+                confirmButtonText: "Yes, delete it!",
+                closeOnConfirm: false
+            },
+            function(){
+                $.ajax({
+                    url: '{% url 'eblast:delete_emailgroup' %}',
+                    type: 'POST',
+                    data: {'id': emailgroup_id},
+                    success: function(data){
+                        swal({
+                            title: "Deleted!",
+                            text: "Record has been deleted.",
+                            type: "success"
+                        }, function () {
+                            location.reload();
+                            }
+                        );
+                    }
+                });
+            });
+            return false;
+        });
+        $(document).on('click', '#editemailgroupmodalsubmit', function(){
+            var form = $("#editemailgroupform");
+            var data = new FormData(form[0]);
+            $.ajax({
+                url: $(form).attr('action'),
+                type: $(form).attr('method'),
+                data: data,
+                contentType: false,
+                processData: false,
+                success: function(data){
+                    loadEmailGroup(data);
+                    $("#editemailgroupmodal").modal('hide');
+                },
+                error: function(data){
+                    $('.listcontent-content').html(data.responseText);
+                    $("#id_users").selectpicker({
+                        liveSearch: true
+                    });
+                    $('#id_csv_file').fileinput({
+                        showUpload: false
+                    });
+                }
+            });
+        });
+    </script>
 {% endblock %}
