--- a/templates/sidebar_main.html
+++ b/templates/sidebar_main.html
@@ -80,7 +80,7 @@
         </span>
     </a>
     <ul class="treeview-menu">
-        <li class="{% active request 'eblast:emailgroups' %}"><a href="{% url 'eblast:emailgroups' %}"><i class="fa fa-circle-o"></i>{% trans "EmailGroups" %}</a></li>
+        <li class="{% active request 'eblast:emailgroups' %}"><a href="{% url 'eblast:emailgroups' %}"><i class="fa fa-circle-o"></i>{% trans "Email Lists" %}</a></li>
     </ul>
 </li>
 {% endif %}
