--- a/templates/eblast/emailgroupform.html
+++ b/templates/eblast/emailgroupform.html
@@ -1,6 +1,6 @@
 {% load i18n bootstrap_tags %}
 <div class="listcontent-header text-center">
-    <h4>{% trans "Add new group" %}</h4>
+    <h4>{% trans "Create List" %}</h4>
 </div>
 <div class="listcontent-body">
     <div class="addgroupmember">
