--- a/templates/sidebar_main.html
+++ b/templates/sidebar_main.html
@@ -81,6 +81,7 @@
     </a>
     <ul class="treeview-menu">
         <li class="{% active request 'eblast:emailgroups' %}"><a href="{% url 'eblast:emailgroups' %}"><i class="fa fa-circle-o"></i>{% trans "Email Lists" %}</a></li>
+        <li class="{% active request 'eblast:emailtemplates' %}"><a href="{% url 'eblast:emailtemplates' %}"><i class="fa fa-circle-o"></i>{% trans "Email Templates" %}</a></li>
     </ul>
 </li>
 {% endif %}
