--- a/templates/eblast/emailtemplate.html
+++ b/templates/eblast/emailtemplate.html
@@ -1,11 +1,11 @@
 {% load i18n bootstrap_tags %}
 <div class="listcontent-header">
-    <div class="text-center">
+    <div class="text-center objectName" contenteditable="true" data-id="{{ emailtemplate.id }}">
         <h4> {{ emailtemplate.name }} </h4>
     </div>
     <div class="action-ellipsis dropdown">
         <i class="fa fa-ellipsis-v dropdown-toggle" data-toggle="dropdown"></i>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-right">
             <li><a href="#" data-id='{{ emailtemplate.id }}' class="deleteemailtemplate">{% trans "Delete" %}</a></li>
             {% if emailtemplate.template %}
                 <li><a href="{% url 'eblast:preview_emailtemplate' emailtemplate.id %}" target="_blank">{% trans "Preview" %}</a></li>
