--- a/templates/eblast/emailtemplates_page.html
+++ b/templates/eblast/emailtemplates_page.html
@@ -43,7 +43,7 @@
                         <div class="listcontent-header text-center">
                             <h4>{% trans "Template Lists" %}</h4>
                         </div>
-                        <div class="listcontent-body">
+                        <div class="listcontent-body lists">
                             <ul>
                                 {% for emailtemplate in emailtemplates %}
                                     {% if forloop.counter == 1 %}
@@ -112,6 +112,8 @@
         $('#id_html_file').fileinput({
             showUpload: false
         });
+        var objectName = $(".objectName").html();
+        CKEDITOR.disableAutoInline = true;
         $(document).on('click', '#newemailtemplateformbtn', function(){
             var form = $("#newemailtemplateform");
             var data = new FormData(form[0]);
@@ -123,7 +125,10 @@
                 processData: false,
                 success: function(data){
                     {% if emailtemplates %}
-                        loadEmailTemplate(data);
+                        loadEmailTemplate(data.id);
+                        $('.lists>ul').append(data.html);
+                        $('.emailTemplate').removeClass('selected');
+                        $('.emailTemplate[data-id=' + data.id + ']').addClass('selected');
                     {% else %}
                         location.reload();
                     {% endif %}
@@ -203,6 +208,20 @@
                     reloadCKEditor();
                 }
             });
+        });
+        $(document).on('blur', '.objectName', function() {
+            if (objectName!=$(this).html()){
+                var id = $(this).data('id');
+                var name = $(this).text();
+                $.ajax({
+                    url: '{% url 'eblast:change_template_name' %}',
+                    data: {'id': id, 'name': name},
+                    type: 'POST',
+                    success: function () {
+                        $('.emailTemplate[data-id=' + id + ']').text(name);
+                    }
+                });
+            }
         });
     </script>
 {% endblock %}
