--- a/templates/eblast/emailtemplates_page.html
+++ b/templates/eblast/emailtemplates_page.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-6">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search here...">
+                <input type="text" class="form-control" placeholder="Search by Template Name..." id="liveSearch">
                 <span class="input-group-btn">
                     <button type="submit" class="btn btn-content-header btn-content-search"><i class="fa fa-search"></i></button>
                 </span>
@@ -44,15 +44,7 @@
                             <h4>{% trans "Template Lists" %}</h4>
                         </div>
                         <div class="listcontent-body lists">
-                            <ul>
-                                {% for emailtemplate in emailtemplates %}
-                                    {% if forloop.counter == 1 %}
-                                        <li class="selected emailTemplate" data-id={{ emailtemplate.id }} style="padding: 10px">{{ emailtemplate.name }}</li>
-                                    {% else %}
-                                        <li class="emailTemplate" data-id={{ emailtemplate.id }} style="padding: 10px">{{ emailtemplate.name }}</li>
-                                    {% endif %}
-                                {% endfor %}
-                            </ul>
+                            {% include "eblast/emailtemplateslist.html" %}
                         </div>
                         {% if emailtemplates %}
                         <div class="listcontent-addnewbtn newbtn" id="addnewtemplate">
@@ -222,6 +214,16 @@
                     }
                 });
             }
+        });
+        $("#liveSearch").keyup(function(){
+            var _this = $(this);
+            $.ajax({
+                url: '{% url 'eblast:filter_template' %}',
+                data: {'query': _this.val()},
+                success: function (data) {
+                    $('.lists').html(data);
+                }
+            });
         });
     </script>
 {% endblock %}
