minor javascript fix

--- a/templates/eblast/emailcampaign_page.html
+++ b/templates/eblast/emailcampaign_page.html
@@ -318,7 +318,7 @@
             });
         });
         var mouse_is_inside = false;
-        $(".filterbtn").hover(function(){
+        $(".filterbtn, .filter-sidebar, .filter-sidebar-bg").hover(function(){
             mouse_is_inside=true;
         }, function(){
             mouse_is_inside=false;
