--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/emojione/2.2.6/assets/css/emojione.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.1.5">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.1.6">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/_all-skins.min.css" %}">
@@ -590,7 +590,7 @@
     <!-- PicEdit -->
     <script src="{% static "plugins/picedit/js/picedit.min.js" %}"></script>
     <!-- AdminLTE App -->
-    <script src="{% static "dist/js/app.js" %}"></script>
+    <script src="{% static "dist/js/app.js" %}?v=1.1.0"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="{% static "dist/js/demo.js" %}"></script>
     <!--Sweet alert-->
